--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = favicon_link_tag
     = enable_html5_for_ie
     = include_jquery
+    = include_fonts
     = yield :head
 
     - if Rails.env.production?
