Center title book by vertical

--- a/app/assets/stylesheets/pages/title.css.sass
+++ b/app/assets/stylesheets/pages/title.css.sass
@@ -8,7 +8,7 @@
   .book
     width: 470px
     margin: 0 auto
-    padding: 10px 0
+    padding-top: 10px
     position: relative
   .shadow
     position: absolute
