Add open badge to title

--- a/app/views/title/title.html.haml
+++ b/app/views/title/title.html.haml
@@ -7,3 +7,9 @@
       .title
         .head
         = @title.html
+      %a.open-badge.new( href="/" )
+        .border.no-right
+        .crop
+          .arrow
+            .border
+        Начать чтение
