--- a/app/assets/stylesheets/core/common.css.sass
+++ b/app/assets/stylesheets/core/common.css.sass
@@ -11,3 +11,9 @@ body
   background: white
   color: black
   font-family: 'PT Sans', sans-serif
+
+a:active, a:focus
+  outline: none
+
+input
+  outline: none
