--- a/app/assets/stylesheets/pages/title.css.sass
+++ b/app/assets/stylesheets/pages/title.css.sass
@@ -11,7 +11,7 @@ $title-height: 1.4 * $title-width
   .book
     width: $title-width
     margin: 0 auto
-    padding-top: 10px
+    padding: 10px 0
   .book-wrap
     position: relative
   .bottom
@@ -23,6 +23,7 @@ $title-height: 1.4 * $title-width
     background: #fcfcfc
     border: 1px solid #cfcfcf
     +box-shadow(rgba(0, 0, 0, 0.2) 0 0 15px)
+    z-index: 1
   .page
     position: absolute
     width: $title-width - 2px
@@ -35,6 +36,7 @@ $title-height: 1.4 * $title-width
       left: #{$i}px
       top: #{$i + 1}px
       bottom: #{$i + 1}px
+      z-index: #{14 - $i}
   .title
     width: 100%
     height: $title-height - 2px
@@ -45,6 +47,8 @@ $title-height: 1.4 * $title-width
     z-index: 2
     +border-left-radius(4px)
     +box-shadow(rgba(0, 0, 0, 0.15) 6px 0 6px -6px inset)
+    z-index: 20
+    overflow: hidden
   .head
     position: absolute
     background: image-url("title/vessels-and-nerves.png")
@@ -69,3 +73,54 @@ $title-height: 1.4 * $title-width
     strong
       display: block
       font-weight: bold
+  .open-badge
+    display: block
+    position: absolute
+    left: 100%
+    margin-left: -10px
+    height: 30px
+    line-height: 30px
+    color: white
+    text-shadow: rgba(0, 0, 0, 0.5) 0 1px 0
+    text-decoration: none
+    z-index: 14
+    padding: 0 6px 0 22px
+    &, .arrow
+      background: #e3591a
+      +transition(background, 200ms, linear)
+      +box-shadow(rgba(0, 0, 0, 0.3) 0 0 10px)
+    .crop
+      position: absolute
+      top: 0
+      left: 100%
+      width: 20px
+      height: 30px
+      overflow: hidden
+    .arrow
+      position: absolute
+      top: 4px
+      left: -10px
+      width: 22px
+      height: 22px
+      +rotate(45deg)
+    .border
+      position: absolute
+      top: 1px
+      right: 1px
+      bottom: 1px
+      left: 1px
+      border: 1px solid lighten(#e3591a, 10%)
+      +transition(border-color, 200ms)
+      &.no-right
+        right: 0
+        border-right: none
+    &:hover
+      &, .arrow
+        background: lighten(#e3591a, 6%)
+      .border
+        border-color: lighten(#e3591a, 16%)
+    &:active
+      &, .arrow
+        +box-shadow(rgba(0, 0, 0, 0.4) 0 0 5px)
+    &.new
+      top: 160px
