--- a/app/assets/stylesheets/pages/title.css.sass
+++ b/app/assets/stylesheets/pages/title.css.sass
@@ -34,9 +34,30 @@ $title-height: 1.4 * $title-width
   @for $i from 1 through 12
     .page#{$i}
       left: #{$i}px
-      top: #{$i + 1}px
-      bottom: #{$i + 1}px
+      top: #{$i + 2}px
+      bottom: #{$i + 2}px
       z-index: #{14 - $i}
+  .page1
+    +box-shadow(rgba(0, 0, 0, 0.1) 15px 0 15px -15px inset)
+  .back-side
+    width: 100%
+    height: $title-height - 2px
+    position: absolute
+    left: -100%
+    background: #f8f8f8
+    border: 1px solid #cfcfcf
+    border-right-color: #e8e8e8
+    +box-shadow(rgba(0, 0, 0, 0.1) 0 0 20px)
+    z-index: 20
+    display: none
+    .paper
+      position: absolute
+      top: 2px
+      right: -1px
+      bottom: 2px
+      left: 2px
+      background: white
+      +box-shadow(rgba(0, 0, 0, 0.1) -7px 0 7px -7px inset)
   .title
     width: 100%
     height: $title-height - 2px
@@ -84,25 +105,39 @@ $title-height: 1.4 * $title-width
     text-shadow: rgba(0, 0, 0, 0.5) 0 1px 0
     text-decoration: none
     z-index: 14
-    padding: 0 6px 0 22px
+    padding: 0 6px 0 32px
     &, .arrow
       background: #e3591a
       +transition(background, 200ms, linear)
-      +box-shadow(rgba(0, 0, 0, 0.3) 0 0 10px)
-    .crop
+    .crop-shadow
       position: absolute
-      top: 0
+      top: -12px
+      right: 0
+      bottom: -12px
+      left: 0
+      overflow: hidden
+    .shadow
+      position: absolute
+      top: 12px
+      right: 0
+      bottom: 12px
+      left: 22px
+      +box-shadow(rgba(0, 0, 0, 0.3) 10px 0 12px)
+    .crop-arrow
+      position: absolute
+      top: -12px
       left: 100%
-      width: 20px
-      height: 30px
+      width: 25px
+      height: 30px + 2 * 12px
       overflow: hidden
     .arrow
       position: absolute
-      top: 4px
+      top: 12px + 4px
       left: -10px
       width: 22px
       height: 22px
       +rotate(45deg)
+      +box-shadow(rgba(0, 0, 0, 0.3) 0 0 12px)
     .border
       position: absolute
       top: 1px
