--- a/app/views/title/title.html.haml
+++ b/app/views/title/title.html.haml
@@ -11,6 +11,7 @@
         = @title.html
       %a.open-badge.new( href="/" role="start-reading" )
         .border.no-right
+        .gradient
         .crop-shadow
           .shadow
         .crop-arrow
