Load posts by URL

--- a/app/views/title/title.html.haml
+++ b/app/views/title/title.html.haml
@@ -9,7 +9,7 @@
       .title
         .head
         = @title.html
-      %a.open-badge.new( href="/" role="start-reading" )
+      %a.open-badge.new( href="/say-and-relax.com/hero/awakening" role="start-reading" )
         .border.no-right
         .gradient
         .crop-shadow
