Add basic style for post pages

--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -1,5 +1,8 @@
 @import 'compass/css3'
 
+$red: #e3591a
+$gray-background: #f2f2f2
+
 @mixin image-size($path)
   width: image-width($path)
   height: image-height($path)
