--- a/app/assets/stylesheets/core/full-loader.css.sass
+++ b/app/assets/stylesheets/core/full-loader.css.sass
@@ -7,7 +7,7 @@ body.js .full-loader
   width: 100%
   height: 100%
   z-index: 1000
-  background: #f2f2f2
+  background: $gray-background
   +transition(opacity, 900ms)
   .center
     position: absolute
