--- a/app/assets/stylesheets/pages/title.css.sass
+++ b/app/assets/stylesheets/pages/title.css.sass
@@ -7,7 +7,7 @@ $title-height: 1.4 * $title-width
 .title-page
   width: 100%
   min-height: 100%
-  background: #f2f2f2
+  background: $gray-background
   .book
     width: $title-width
     margin: 0 auto
@@ -107,7 +107,7 @@ $title-height: 1.4 * $title-width
     z-index: 14
     padding: 0 6px 0 262px
     &, .arrow
-      background: #e3591a
+      background: $red
       +transition(background, 200ms, linear)
     .crop-shadow
       position: absolute
@@ -144,7 +144,7 @@ $title-height: 1.4 * $title-width
       right: 1px
       bottom: 1px
       left: 1px
-      border: 1px solid lighten(#e3591a, 10%)
+      border: 1px solid lighten($red, 10%)
       +transition(border-color, 200ms)
       &.no-right
         right: 0
@@ -159,9 +159,9 @@ $title-height: 1.4 * $title-width
       +box-shadow(rgba(0, 0, 0, 0.15) 0 3px 3px -2px, rgba(0, 0, 0, 0.15) 0 -3px 3px -2px, rgba(0, 0, 0, 0.15) -3px 0 3px -2px)
     &:hover
       &, .arrow
-        background: lighten(#e3591a, 6%)
+        background: lighten($red, 6%)
       .border
-        border-color: lighten(#e3591a, 16%)
+        border-color: lighten($red, 16%)
     &:active
       &, .arrow
         +box-shadow(rgba(0, 0, 0, 0.4) 0 0 5px)
