--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -4,56 +4,148 @@
   width: 100%
   min-height: 100%
   background: $gray-background
-  padding: 20px 0
-  .date-badge
-    position: absolute
-    top: 30px
-    left: 25px
-    width: 35px
-    color: white
-    text-align: center
-    line-height: 1
-    .year
-      background: #666
-      padding: 4px 0
-      font-size: 12px
-      border-bottom: 1px solid white
-      +box-shadow(rgba(0, 0, 0, 0.2) 0 0 5px)
-    .date
-      background: #666
-      padding: 4px 0 0 0
-      +box-shadow(rgba(0, 0, 0, 0.2) 0 0 5px)
-    .month
-      text-transform: uppercase
-      font-size: 12px
-    .day
-      font-size: 18px
-      padding-bottom: 6px
-    .crop
-      height: 10px
-      overflow: hidden
-      position: relative
-    .left-corner, .right-corner
-      background: #666
-      +box-shadow(rgba(0, 0, 0, 0.2) 0 0 5px)
-      height: 10px
-      position: absolute
-      top: -10px
-      width: 50px
-    .left-corner
-      left: -9px
-      +rotate(-25deg)
-    .right-corner
-      right: -9px
-      +rotate(25deg)
-  .paper
-    width: 600px
-    margin: 10px auto
-    padding: 20px 80px
-    background: white
-    +box-shadow(#ccc 0px 0px 2px 1px)
-    line-height: 1.3
-    font-size: 16px
+  padding: 40px 0 15px 0
+
+.post-page .top-menu
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  height: 30px
+  background: black
+  +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
+  z-index: 50
+  .center
+    width: 760px
+    margin: 0 auto
     position: relative
-    p
-      padding: 6px 0
+  .title
+    padding-left: 80px
+    height: 100%
+    line-height: 29px
+    font-size: 19px
+    font-family: Philosopher, serif
+    color: white
+  .subscribe-and-share
+    float: right
+    margin-right: -5px
+    .slide-button
+      float: left
+  .slide-button
+    position: relative
+    .button
+      display: block
+      color: white
+      text-decoration: none
+      font-size: 14px
+      line-height: 29px
+      height: 29px
+      padding: 0 10px
+      text-shadow: white 0 0 0
+      border: 1 solid black
+      +box-shadow(white 0 0 13px -13px inset)
+      +transition(all, 200ms)
+      &:hover
+        color: white
+        text-shadow: white 0 0 2px
+    .content
+      display: none
+      position: absolute
+      width: 200px
+      top: 100%
+      left: 0
+      background: black
+      color: white
+      font-size: 15px
+      padding: 10px 12px 5px 12px
+      +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
+      line-height: 1.25
+      margin-top: -5px
+      opacity: 0
+      +transition("margin-top, opacity", 200ms)
+      &, .rotated
+        +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
+      .arrow
+        position: absolute
+        bottom: 100%
+        left: 35px
+        width: 16px
+        height: 8px
+      .rotated
+        width: 11px
+        height: 11px
+        +rotate(45deg)
+        background: black
+        position: absolute
+        top: 3px
+      p
+        padding-bottom: 5px
+    &.open
+      .button
+        +box-shadow(white 0 -13px 13px -13px inset)
+        border-bottom: 1px solid white
+      .content
+        opacity: 1
+        margin-top: 11px
+  .slide-button.what-is-it
+    position: absolute
+    top: 0
+    right: 100%
+    margin-right: 30px
+    .button
+      color: #d8d8d8
+      font-size: 12px
+
+.post-page .paper
+  width: 600px
+  margin: 10px auto
+  padding: 20px 80px
+  background: white
+  +box-shadow(#ccc 0px 0px 2px 1px)
+  line-height: 1.3
+  font-size: 16px
+  position: relative
+  p
+    padding: 6px 0
+
+.post-page .date-badge
+  position: absolute
+  top: 30px
+  left: 25px
+  width: 35px
+  color: white
+  text-align: center
+  line-height: 1
+  .year
+    background: #666
+    padding: 4px 0
+    font-size: 12px
+    border-bottom: 1px solid white
+    +box-shadow(rgba(0, 0, 0, 0.2) 0 0 5px)
+  .date
+    background: #666
+    padding: 4px 0 0 0
+    +box-shadow(rgba(0, 0, 0, 0.2) 0 0 5px)
+  .month
+    text-transform: uppercase
+    font-size: 12px
+  .day
+    font-size: 18px
+    padding-bottom: 6px
+  .crop
+    height: 10px
+    overflow: hidden
+    position: relative
+  .left-corner, .right-corner
+    background: #666
+    +box-shadow(rgba(0, 0, 0, 0.2) 0 0 5px)
+    height: 10px
+    position: absolute
+    top: -10px
+    width: 50px
+  .left-corner
+    left: -9px
+    +rotate(-25deg)
+  .right-corner
+    right: -9px
+    +rotate(25deg)
