--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -12,14 +12,16 @@
             Это книга в виде блога.
           %p
             Герой из фантастического мира пишет дневник
-            в реальном времени (в поправкой на будущее).
+            прямо по ходу развития событий.
+          %p
+            Вы можете написать комментарий герою или автору.
       .subscribe-and-share
-        .slide-button
+        .slide-button.subscribe
           %a.button( href="#subscribe" ) Подписаться
           .content
             .arrow
               .rotated
-        .slide-button
+        .slide-button.share
           %a.button( href="#share" ) Расскажи друзьям
           .content
             .arrow
