Add 3D effects to open title

--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -48,10 +48,11 @@
   .text
     height: 100px
     text-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px
+    +box-shadow(rgba(0, 0, 0, 0.2) 0 0 5px)
   .rotated
     position: relative
     +rotate(-90deg)
-    top: 60px
+    top: 59px
     left: -2px
   .text, .left-corner, .right-corner
     background: #c00
