--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,7 @@
   %body.no-js
     :javascript
       document.body.className = 'js';
+      plague.detect3d()
     .full-loader
       .center
         Загрузка…
