--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -6,10 +6,11 @@
     top: 0
     left: 0
     right: 0
+    z-index: 50
+  .top-menu-rotator
     height: 30px
     background: black
     +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
-    z-index: 50
   .center
     width: 760px
     margin: 0 auto
@@ -153,5 +154,17 @@
       left: auto
       right: 57px
 
-.top-menu.hidden .top-menu-fixed
+.transform3d .top-menu
+  .top-menu-fixed
+    +perspective(2000px)
+  &.hidden .top-menu-rotator
+    +rotateX(90deg)
+  .top-menu-rotator
+    padding-top: 32px
+    position: relative
+    top: -32px
+    +transition(all, 600ms)
+
+.transform2d .top-menu.hidden .top-menu-fixed
   top: -40px
+  display: none
