--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -1,39 +1,41 @@
 .top-menu{ class_if('hidden', @hide_top_menu) }
   .top-menu-fixed
-    .center
+    .top-menu-rotator
+      .center
 
-      .slide-button.what-is-it
-        %a.button( href="#what-is-it" ) Что это такое?
-        .content
-          .arrow
-            .rotated
-          %p
-            Это книга в виде блога.
-          %p
-            Герой из фантастического мира пишет дневник
-            прямо по ходу развития событий.
-          %p
-            Вы можете написать комментарий герою или автору.
-      .subscribe-and-share
-        .slide-button.subscribe
-          %a.button( href="#subscribe" ) Подписаться
+        .slide-button.what-is-it
+          %a.button( href="#what-is-it" ) Что это такое?
           .content
             .arrow
               .rotated
-        .slide-button.share
-          %a.button( href="#share" ) Расскажи друзьям
-          .content
-            .arrow
-              .rotated
+            %p
+              Это книга в виде блога.
+            %p
+              Герой из фантастического мира пишет дневник
+              прямо по ходу развития событий.
+            %p
+              Вы можете написать комментарий герою или автору.
+        .subscribe-and-share
+          .slide-button.subscribe
+            %a.button( href="#subscribe" ) Подписаться
+            .content
+              .arrow
+                .rotated
+          .slide-button.share
+            %a.button( href="#share" ) Расскажи друзьям
+            .content
+              .arrow
+                .rotated
 
-      - prevP = @post.try(:prev)
-      - nextP = @post.try(:next)
-      .prev-next{ class_if('first', !prevP), class_if('last', !nextP) }
-        %a.prev.post( title="Предыдущая запись" href="#{prevP.try(:url)}" ) ↑
-        %a.prev.title( title="Обложка" href="#{root_path}" ) ↑
-        %a.next.post( title="Следующая запись" href="#{nextP.try(:url)}" ) ↓
-        .next.disabled( title="Продолжение следует" ) ↓
-      .title
-        .top-title
-        .current-title= @post.try(:title)
-        .bottom-title
+        - prevPage = @post.try(:prev)
+        - nextPage = @post.try(:next)
+        - isFirst  = prevPage.nil? or prevPage.title?
+        .prev-next{ class_if('first', isFirst), class_if('last', !nextPage) }
+          %a.prev.page( title="Предыдущая запись" href="#{prevPage.try(:url)}" ) ↑
+          %a.prev.title( title="Обложка" href="#{root_path}" ) ↑
+          %a.next.page( title="Следующая запись" href="#{nextPage.try(:url)}" ) ↓
+          .next.disabled( title="Продолжение следует" ) ↓
+        .title
+          .top-title
+          .current-title= @post.try(:title)
+          .bottom-title
