--- a/app/views/posts/title.html.haml
+++ b/app/views/posts/title.html.haml
@@ -8,11 +8,14 @@
       .bottom
       - (1..12).to_a.reverse_each do |i|
         .page( class="page#{i} #{(i % 2).zero? ? 'even' : 'odd'}" )
-      .back-side
-        .paper
-      .title
-        .head
-        = @title.html
+      .rotator
+        .back-side
+          .paper
+          .back-side-shadow
+        .title
+          .head
+          = @title.html
+          .title-light
       %a.open-badge.new( href="#{@first.url}" role="start-reading" )
         .border.no-right
         .gradient
