Update story repository by web request

--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -9,7 +9,7 @@
             .arrow
               .rotated
             %p
-              Это книга в виде блога.
+              «Инсомнис» — книга в формате блога.
             %p
               Герой из фантастического мира пишет дневник
               прямо по ходу развития событий.
