Use HTML5 sematics tags

--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -1,4 +1,4 @@
-.top-menu{ class_if('hidden', @hide_top_menu) }
+%header.top-menu{ class_if('hidden', @hide_top_menu) }
   .top-menu-fixed
     .top-menu-rotator
       .center
