Clean up body classes initializing

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,8 +28,7 @@
     = "<!-- #{hash} -->".html_safe
   %body.no-js
     :javascript
-      document.body.className = 'js';
-      plague.detect3d();
+      plague.initBodyClasses();
     .full-loader
       .center
         Загрузка…
