Remember last reading place

--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -6,6 +6,10 @@
   background: $gray-background
   padding: 10px 0 15px 0
   +box-sizing(border-box)
+body.all-posts .post-page
+  min-height: 0
+  &.last-post
+    min-height: 100%
 
 .post-page .paper
   width: 600px
