Add fix for browser without console.log

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,7 @@
     = stylesheet_link_tag :application, media: :all, type: nil
     = include_fonts
 
+    = render 'shared/console'
     = include_jquery
     = javascript_include_tag :application, type: nil
 
